jss-compiler/tests/lexer/invalid/invalid_string_escape.jss
let str texto = "escape \t invalido";
